@@ -1,3 +1,7 @@
+2004-08-06 00:38  bryce
+
+	* lib/SVG/Metadata, scripts/svg_annotate:  Keywords functionality
+
 2004-06-26 14:39  bryce
 
 	* scripts/: cleanup_clipart, test_it, unpack_clipart,
